[gd_scene load_steps=10 format=3 uid="uid://rq8a5oiksov0"]

[ext_resource type="StyleBox" uid="uid://bv5nji5118csl" path="res://src/ui/bars/block.tres" id="1_lw8x6"]
[ext_resource type="Script" path="res://src/ui/unit_ui.gd" id="1_qqqlg"]
[ext_resource type="StyleBox" uid="uid://bjxfe6utmhh3f" path="res://src/ui/bars/bg.tres" id="2_cpexm"]
[ext_resource type="StyleBox" uid="uid://dtfxp5ae5v585" path="res://src/ui/bars/damage.tres" id="3_7fa5y"]
[ext_resource type="StyleBox" uid="uid://wtfr4tp2a880" path="res://src/ui/bars/damage_bg.tres" id="3_g061p"]
[ext_resource type="StyleBox" uid="uid://0hjdwtrloppi" path="res://src/ui/bars/hp.tres" id="5_l0o87"]
[ext_resource type="StyleBox" uid="uid://caq6ndngo4q5m" path="res://src/ui/bars/guard.tres" id="5_m1nq2"]
[ext_resource type="LabelSettings" uid="uid://d0l3ivi37s6dm" path="res://src/ui/text_setting.tres" id="7_wvobf"]
[ext_resource type="ButtonGroup" uid="uid://c0x0waiyrhkoj" path="res://src/ui/stance_buttons.tres" id="8_oum0f"]

[node name="UnitUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qqqlg")

[node name="BlockContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 320.0
offset_bottom = 32.0
metadata/_edit_group_ = true

[node name="BlockName" type="Label" parent="BlockContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Block"
label_settings = ExtResource("7_wvobf")

[node name="BlockValue" type="Label" parent="BlockContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00"
label_settings = ExtResource("7_wvobf")

[node name="BlockSep" type="Label" parent="BlockContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "/"
label_settings = ExtResource("7_wvobf")

[node name="BlockMaxValue" type="Label" parent="BlockContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00"
label_settings = ExtResource("7_wvobf")

[node name="BlockMod" type="Label" parent="BlockContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+0.000"
label_settings = ExtResource("7_wvobf")

[node name="BlockBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 80.0
theme_override_styles/background = ExtResource("2_cpexm")
theme_override_styles/fill = ExtResource("1_lw8x6")
max_value = 1.0
show_percentage = false
metadata/_edit_group_ = true

[node name="BlockBarGuard" type="ProgressBar" parent="BlockBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = ExtResource("2_cpexm")
theme_override_styles/fill = ExtResource("5_m1nq2")
max_value = 1.0
show_percentage = false

[node name="BlockBarDamage" type="ProgressBar" parent="BlockBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = ExtResource("3_g061p")
theme_override_styles/fill = ExtResource("3_7fa5y")
max_value = 1.0
show_percentage = false

[node name="HPContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 96.0
offset_right = 320.0
offset_bottom = 128.0
metadata/_edit_group_ = true

[node name="HPName" type="Label" parent="HPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HP"
label_settings = ExtResource("7_wvobf")

[node name="HPValue" type="Label" parent="HPContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00"
label_settings = ExtResource("7_wvobf")

[node name="HPSep" type="Label" parent="HPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "/"
label_settings = ExtResource("7_wvobf")

[node name="HPMaxValue" type="Label" parent="HPContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00"
label_settings = ExtResource("7_wvobf")

[node name="HPMod" type="Label" parent="HPContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "+0.000"
label_settings = ExtResource("7_wvobf")

[node name="HPBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 128.0
offset_right = 320.0
offset_bottom = 176.0
theme_override_styles/background = ExtResource("2_cpexm")
theme_override_styles/fill = ExtResource("5_l0o87")
max_value = 1.0
show_percentage = false
metadata/_edit_group_ = true

[node name="HPBarDamage" type="ProgressBar" parent="HPBar"]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = ExtResource("3_g061p")
theme_override_styles/fill = ExtResource("3_7fa5y")
max_value = 1.0
show_percentage = false

[node name="StatsContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = 192.0
offset_right = 128.0
offset_bottom = 320.0
columns = 2
metadata/_edit_group_ = true

[node name="StrName" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "STR "
label_settings = ExtResource("7_wvobf")

[node name="StrValue" type="Label" parent="StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00e000"
label_settings = ExtResource("7_wvobf")

[node name="DexName" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "DEX "
label_settings = ExtResource("7_wvobf")

[node name="DexValue" type="Label" parent="StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00e000"
label_settings = ExtResource("7_wvobf")

[node name="IntName" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "INT "
label_settings = ExtResource("7_wvobf")

[node name="IntValue" type="Label" parent="StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00e000"
label_settings = ExtResource("7_wvobf")

[node name="VitName" type="Label" parent="StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "VIT "
label_settings = ExtResource("7_wvobf")

[node name="VitValue" type="Label" parent="StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00e000"
label_settings = ExtResource("7_wvobf")

[node name="PlayerControls" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StanceLabel" type="Label" parent="PlayerControls"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 184.0
offset_top = 184.0
offset_right = 264.0
offset_bottom = 210.0
mouse_filter = 0
theme_override_font_sizes/font_size = 18
text = "STANCES"
label_settings = ExtResource("7_wvobf")
horizontal_alignment = 1

[node name="StanceButtonsContainer1" type="VBoxContainer" parent="PlayerControls"]
layout_mode = 2
offset_left = 136.0
offset_top = 216.0
offset_right = 232.0
offset_bottom = 328.0
size_flags_vertical = 3
theme_override_constants/separation = 16
metadata/_edit_group_ = true

[node name="ButtonStrong" type="Button" parent="PlayerControls/StanceButtonsContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("8_oum0f")
text = "MELEE"

[node name="ButtonAgile" type="Button" parent="PlayerControls/StanceButtonsContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("8_oum0f")
text = "RANGED"

[node name="ButtonMagic" type="Button" parent="PlayerControls/StanceButtonsContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("8_oum0f")
text = "MAGIC"

[node name="StanceButtonsContainer2" type="VBoxContainer" parent="PlayerControls"]
layout_mode = 2
offset_left = 248.0
offset_top = 216.0
offset_right = 312.0
offset_bottom = 328.0
size_flags_vertical = 3
theme_override_constants/separation = 16
metadata/_edit_group_ = true

[node name="ButtonAttack" type="Button" parent="PlayerControls/StanceButtonsContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("8_oum0f")
text = "ASSAULT"

[node name="ButtonDefend" type="Button" parent="PlayerControls/StanceButtonsContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_pressed = true
button_group = ExtResource("8_oum0f")
text = "DEFENSE"

[node name="PreviewContainer" type="GridContainer" parent="PlayerControls"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 328.0
offset_right = 128.0
offset_bottom = 384.0
columns = 2
metadata/_edit_group_ = true

[node name="AtkName" type="Label" parent="PlayerControls/PreviewContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ATK "
label_settings = ExtResource("7_wvobf")

[node name="AtkValue" type="Label" parent="PlayerControls/PreviewContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00e000"
label_settings = ExtResource("7_wvobf")

[node name="DefName" type="Label" parent="PlayerControls/PreviewContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "DEF "
label_settings = ExtResource("7_wvobf")

[node name="DefValue" type="Label" parent="PlayerControls/PreviewContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0.00e000"
label_settings = ExtResource("7_wvobf")

[node name="ForwardButton" type="Button" parent="PlayerControls"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 136.0
offset_top = 344.0
offset_right = 312.0
offset_bottom = 392.0
theme_override_font_sizes/font_size = 24
disabled = true
text = "..."

[connection signal="stance_changed" from="." to="." method="_on_stance_changed"]
[connection signal="pressed" from="PlayerControls/StanceButtonsContainer1/ButtonStrong" to="." method="_on_button_strong_pressed"]
[connection signal="pressed" from="PlayerControls/StanceButtonsContainer1/ButtonAgile" to="." method="_on_button_agile_pressed"]
[connection signal="pressed" from="PlayerControls/StanceButtonsContainer1/ButtonMagic" to="." method="_on_button_magic_pressed"]
[connection signal="pressed" from="PlayerControls/StanceButtonsContainer2/ButtonAttack" to="." method="_on_button_attack_pressed"]
[connection signal="pressed" from="PlayerControls/StanceButtonsContainer2/ButtonDefend" to="." method="_on_button_defend_pressed"]
[connection signal="pressed" from="PlayerControls/ForwardButton" to="." method="_on_forward_button_pressed"]
